Name: pipes-bytestring
Version: 1.0.0
Cabal-Version: >=1.14.0
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2012 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Stability: Experimental
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-ByteString-Library/issues
Synopsis: ByteString support for pipes
Description: This library provides common utilities for working with bytestrings
Category: Control, Pipe, Proxies
Tested-With: GHC ==7.4.1
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-ByteString-Library

Library
    Build-Depends:
        base >= 4 && < 5,
        bytestring >= 0.9.2.1,
        transformers >= 0.2.0.0,
        medley
        pipes >= 4.0,
        pipes-parse >= 1.0.0
    Exposed-Modules:
        Pipes.ByteString
    Default-Language: Haskell98
