Name: proxies-bytestring
Version: 1.0.0
Cabal-Version: >=1.14.0
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2012 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Stability: Experimental
Bug-Reports: https://github.com/Gabriel439/Haskell-Proxies-ByteString-Library/issues
Synopsis: Proxy utilities for ByteStrings
Description: Proxy utilities for ByteStrings
Category: Control, Pipe, Proxies
Tested-With: GHC ==7.4.1
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Proxies-ByteString-Library

Library
    Build-Depends:
        base >= 4 && < 5,
        bytestring >= 0.9 && <= 0.10,
        transformers >= 0.2.0.0,
        pipes >= 3.0.0
    Exposed-Modules: Control.Proxy.ByteString
    Default-Language: Haskell98
